[package]
name = "program"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.4"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.1"
thiserror = "1.0"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-token-swap = { version = "2.0", path = "../../token-swap/program", features = [ "no-entrypoint" ] }


[dev-dependencies]
solana-sdk = "1.6.1"
proptest = "0.10"

[lib]
crate-type = ["cdylib", "lib"]